Fixed-Spacing

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,14 @@ h1{
     
 }
 
-.container{
-    /* background-color: rgba(0, 0, 0, 0.1); */
-}
+@media (max-width: 768px){
 
+    .rounded-circle{
+        max-width: 50%;
+        margin-left: 25%;
+        margin-bottom: 15%;
+        max-height: 100%;
+        border: 2px solid black;
+    }
+
+}
